--- a/packages/cos/setup.yaml
+++ b/packages/cos/setup.yaml
@@ -1,6 +1,7 @@
 stages:
   default:
     - name: "Default systemd config"
+      if: '[ -e "/sbin/systemctl" ] || [ -e "/usr/bin/systemctl" ] || [ -e "/usr/sbin/systemctl" ] || [ -e "/usr/bin/systemctl" ]'
       systemd:
         enable:
         - multi-user.target
