--- a/packages/base/build.yaml
+++ b/packages/base/build.yaml
@@ -26,6 +26,11 @@ steps:
     kernel=$(ls /boot/vmlinuz-* | head -n1) && \
     ln -sf "${kernel#/boot/}" /boot/vmlinuz
 - ln -s /usr/sbin/grub-install /usr/sbin/grub2-install
+{{else if eq .Values.distribution "alpine" }}
+- apk update && apk add {{.Values.packages}} {{.Values.kernel_package}}
+- |
+    kernel=$(ls /boot/vmlinuz-* | head -n1) && \
+    ln -sf "${kernel#/boot/}" /boot/vmlinuz
 {{end}}
 {{end}}
 - kernel=$(ls /lib/modules | head -n1) && depmod -a "${kernel}"
