--- a/packages/cos/build.yaml
+++ b/packages/cos/build.yaml
@@ -10,9 +10,13 @@ requires:
 - name: "cloud-config"
   category: "system"
   version: ">=0"
+{{- if .Values.distribution }}
+{{- if ne .Values.distribution "alpine" }}
 - name: "immutable-rootfs"
   category: "system"
   version: ">=0"
+{{end}}
+{{end}}
 - name: "cos-features"
   category: "system"
   version: ">=0"
@@ -20,8 +24,19 @@ requires:
   category: "system"
   version: ">=0"
 
+
 # https://luet-lab.github.io/docs/docs/concepts/packages/specfile/#copy
 copy:
+{{- if .Values.distribution }}
+{{- if eq .Values.distribution "alpine" }}
+- package: 
+    category: "system"
+    name: "initramfs"
+    version: ">=0"
+  source: "/boot/initrd"
+  destination: "/boot/initrd"
+{{end}}
+{{end}}
 - package: 
     category: "toolchain"
     name: "yip"
@@ -54,12 +69,16 @@ steps:
 - sed -i 's/:PRETTY_NAME:/{{.Values.brand_name}} v{{.Values.version}}/g' setup.yaml
 - yip setup.yaml
 
-# Create initrd
+# Create initrd for dracut-based distro
+{{ if .Values.distribution }}
+{{if ne .Values.distribution "alpine" }}
 - |
     cp 50-cos-initrd.conf /etc/dracut.conf.d && \
     kernel=$(ls /lib/modules | head -n1) && \
     dracut -f "/boot/initrd-${kernel}" "${kernel}" && \
     ln -sf "initrd-${kernel}" /boot/initrd
+{{end}}
+{{end}}
 
 # See https://luet-lab.github.io/docs/docs/concepts/packages/specfile/#package-by-container-content
 unpack: true
