--- a/packages/toolchain/yip/build.yaml
+++ b/packages/toolchain/yip/build.yaml
@@ -16,6 +16,8 @@ prelude:
 - dnf install -y git upx
 {{else if eq .Values.distribution "ubuntu" }}
 - apt-get install -y git upx
+{{else if eq .Values.distribution "alpine" }}
+- apk update && apk add git upx make || true
 {{end}}
 {{end}}
 - |
