--- a/packages/utils/gomplate/build.yaml
+++ b/packages/utils/gomplate/build.yaml
@@ -15,6 +15,8 @@ prelude:
 - dnf install -y git
 {{else if eq .Values.distribution "ubuntu" }}
 - apt-get install -y git
+{{else if eq .Values.distribution "alpine" }}
+- apk update && apk add git
 {{end}}
 {{end}}
 - |
