--- a/make/Makefile.test
+++ b/make/Makefile.test
@@ -40,7 +40,7 @@ endif
 # ------------ actual test targets ------------
 #
 
-test: test-clean vagrantfile prepare-test test-smoke test-upgrades-images-signed test-upgrades-images-unsigned test-features test-hooks test-fallback test-recovery test-deploys-images
+test: test-clean vagrantfile prepare-test test-smoke test-upgrades-images-signed test-upgrades-images-unsigned test-features test-suc test-hooks test-fallback test-recovery test-deploys-images
 
 #
 # remove test artifacts
@@ -89,6 +89,9 @@ test-smoke: $(GINKGO)
 
 test-recovery: $(GINKGO)
 	cd $(ROOT_DIR)/tests && $(GINKGO) $(GINKGO_ARGS) ./recovery
+
+test-suc: $(GINKGO)
+	cd $(ROOT_DIR)/tests && $(GINKGO) $(GINKGO_ARGS) ./suc
 
 test-deploys-images: $(GINKGO)
 	cd $(ROOT_DIR)/tests && $(GINKGO) $(GINKGO_ARGS) ./deploys-images
