--- a/packages/grub2/config/grub.cfg
+++ b/packages/grub2/config/grub.cfg
@@ -1,12 +1,18 @@
 set timeout=10
 
+# Load custom env file
 set env_file="/grubenv"
 search --file --set=env_blk "${env_file}"
+
+# Load custom config file
+set custom_menu="/grubmenu"
+search --file --set=menu_blk "${custom_menu}"
 
 if [ "${env_blk}" ] ; then
   load_env -f "(${env_blk})${env_file}"
 fi
 
+# Save default
 if [ "${next_entry}" ]; then
   set default="${next_entry}"
   set next_entry=
@@ -15,7 +21,20 @@ else
   set default="${saved_entry}"
 fi
 
-set fallback="0 1 2"
+## Display a default menu entry if set
+if [ "${default_menu_entry}" ]; then
+  set display_name="${default_menu_entry}"
+else
+  set display_name="cOS"
+fi
+
+## Set a default fallback if set
+if [ "${default_fallback}" ]; then
+  set fallback="${default_fallback}"
+else
+  set fallback="0 1 2"
+fi
+
 set gfxmode=auto
 set gfxpayload=keep
 insmod all_video
@@ -23,29 +42,29 @@ insmod gfxterm
 insmod loopback
 insmod squash4
 
-menuentry "cOS" --id cos {
+menuentry "${display_name}" --id cos {
   search.fs_label COS_STATE root
   set img=/cOS/active.img
   set label=COS_ACTIVE
   loopback loop0 /$img
   set root=($root)
   source (loop0)/etc/cos/bootargs.cfg
-  linux (loop0)$kernel $kernelcmd
+  linux (loop0)$kernel $kernelcmd ${extra_cmdline}
   initrd (loop0)$initramfs
 }
 
-menuentry "cOS (fallback)" --id fallback {
+menuentry "${display_name} (fallback)" --id fallback {
   search.fs_label COS_STATE root
   set img=/cOS/passive.img
   set label=COS_PASSIVE
   loopback loop0 /$img
   set root=($root)
   source (loop0)/etc/cos/bootargs.cfg
-  linux (loop0)$kernel $kernelcmd
+  linux (loop0)$kernel $kernelcmd ${extra_cmdline}
   initrd (loop0)$initramfs
 }
 
-menuentry "cOS recovery" --id recovery {
+menuentry "${display_name} recovery" --id recovery {
   if search.file /cOS/recovery.squashfs ; then
     set img=/cOS/recovery.squashfs
     set recoverylabel=COS_RECOVERY
@@ -57,6 +76,10 @@ menuentry "cOS recovery" --id recovery {
   loopback loop0 /$img
   set root=($root)
   source (loop0)/etc/cos/bootargs.cfg
-  linux (loop0)$kernel $kernelcmd
+  linux (loop0)$kernel $kernelcmd ${extra_cmdline}
   initrd (loop0)$initramfs
 }
+
+if [ "${menu_blk}" ]; then
+  source "(${menu_blk})${custom_menu}"
+fi
