--- a/examples/rpi/Dockerfile
+++ b/examples/rpi/Dockerfile
@@ -3,8 +3,8 @@ FROM quay.io/luet/base:$LUET_VERSION AS luet
 
 FROM opensuse/leap:15.3
 
-ENV COSIGN_EXPERIMENTAL=1
-ENV COSIGN_REPOSITORY=raccos/releases-green
+#ENV COSIGN_EXPERIMENTAL=1
+#ENV COSIGN_REPOSITORY=raccos/releases-green
 
 RUN zypper ref
 RUN zypper in -y \
@@ -67,9 +67,9 @@ COPY conf/luet.yaml /etc/luet/luet.yaml
 RUN curl -L https://github.com/mudler/luet/releases/download/0.20.10/luet-0.20.10-linux-arm64 --output /usr/bin/luet
 
 RUN chmod +x /usr/bin/luet
-RUN luet install -y meta/cos-verify
+#RUN luet install -y meta/cos-verify
 
-RUN luet install --plugin luet-cosign -y meta/cos-minimal
+RUN luet install -y meta/cos-minimal
 
 COPY files/ /
 
