--- a/.github/config/master.yaml
+++ b/.github/config/master.yaml
@@ -55,7 +55,7 @@ flavors:
         skip_tests: false
         run_tests: ["test-fallback"]
         flavor: "green"
-        skip_tests_flavor: [ "blue","orange" ]
+        skip_tests_flavor: [ "blue","orange", "green" ]
         skip_images_flavor: [ "blue","orange" ]
         build_image_qemu: true
         build_image_vbox: false
@@ -66,7 +66,7 @@ flavors:
 
         on:
           push:
-            branches: [ "master" ]
+            branches: [ "master", "arm_fixes" ]
   orange:
     arches:
       x86_64:
