--- a/.github/workflows/build-master-orange-arm64.yaml
+++ b/.github/workflows/build-master-orange-arm64.yaml
@@ -3,6 +3,7 @@ on:
  push:
    branches:
      - master
+     - arm_fixes
 concurrency:
   group: ci-master-orange-arm64-${{ github.head_ref || github.ref }}-${{ github.repository }}
   cancel-in-progress: true
@@ -66,7 +67,7 @@ jobs:
           sudo -E make deps
       - name: Override luet version at toolchain/luet@0.22.7 🔧
         run: |
-          sudo luet install --force --yes toolchain/luet@0.22.7
+          sudo luet replace --yes toolchain/luet --for toolchain/luet@0.22.7
       - name: Run make validate
         run: |
           sudo -E make validate
@@ -121,9 +122,6 @@ jobs:
       - name: Run make deps
         run: |
           sudo -E make deps
-      - name: Override luet version at toolchain/luet@0.22.7 🔧
-        run: |
-          sudo luet install --force --yes toolchain/luet@0.22.7
       - name: Generate link for orange
         run: |
             source .github/helpers.sh
@@ -203,9 +201,6 @@ jobs:
       - name: Run make deps
         run: |
           sudo -E make deps
-      - name: Override luet version at toolchain/luet@0.22.7 🔧
-        run: |
-          sudo luet install --force --yes toolchain/luet@0.22.7
       - name: Download result for build
         uses: actions/download-artifact@v2
         with:
