--- a/.github/workflows/build-pr-blue-x86_64.yaml
+++ b/.github/workflows/build-pr-blue-x86_64.yaml
@@ -65,7 +65,7 @@ jobs:
           sudo -E make deps
       - name: Override luet version at toolchain/luet@0.22.7 🔧
         run: |
-          sudo luet install --force --yes toolchain/luet@0.22.7
+          sudo luet replace --yes toolchain/luet --for toolchain/luet@0.22.7
       - name: Run make validate
         run: |
           sudo -E make validate
